[gd_scene load_steps=24 format=2]

[ext_resource path="res://MultiPlayer/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/image/gem/blue.png" type="Texture" id=2]
[ext_resource path="res://Assets/image/application/opponent_bg.png" type="Texture" id=3]
[ext_resource path="res://Assets/image/gem/brown.png" type="Texture" id=4]
[ext_resource path="res://Assets/image/gem/green.png" type="Texture" id=5]
[ext_resource path="res://Assets/image/gem/red.png" type="Texture" id=6]
[ext_resource path="res://Assets/image/gem/white.png" type="Texture" id=7]
[ext_resource path="res://Assets/image/gem/gold.png" type="Texture" id=8]
[ext_resource path="res://Assets/image/application/portrait.png" type="Texture" id=9]

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 234, 105 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/font/fzmw.ttf"

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 180
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/font/fzmw.ttf"

[sub_resource type="DynamicFont" id=8]
size = 450
outline_size = 15
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=11]
draw_center = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.00392157, 0.356863, 0.6, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0470588, 0.466667, 0.247059, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.682353, 0.207843, 0.235294, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.364706, 0.2, 0.137255, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150

[sub_resource type="DynamicFont" id=15]
size = 90
font_data = SubResource( 2 )

[node name="Player" type="Panel" groups=[
"resetable",
"test_opponent",
]]
margin_right = 1096.0
margin_bottom = 490.0
custom_styles/panel = SubResource( 16 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
margin_right = 190.0
margin_bottom = 190.0
texture = ExtResource( 9 )

[node name="Name" type="Label" parent="."]
margin_left = 192.0
margin_right = 576.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 576.0
margin_right = 755.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1

[node name="WhiteArea" type="Panel" parent="."]
margin_top = 200.0
margin_right = 502.0
margin_bottom = 1163.0
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CardCounter" type="Label" parent="WhiteArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2017.07
margin_right = 502.0
margin_bottom = 2696.07
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="WhiteArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2470.4
margin_right = 500.0
margin_bottom = 2970.4
texture = ExtResource( 7 )

[node name="GemCounter" type="Label" parent="WhiteArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2443.74
margin_right = 502.0
margin_bottom = 2971.74
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueArea" type="Panel" parent="."]
margin_left = 152.0
margin_top = 200.165
margin_right = 654.0
margin_bottom = 1163.16
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CardCounter" type="Label" parent="BlueArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2017.07
margin_right = 502.0
margin_bottom = 2696.07
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BlueArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2470.4
margin_right = 500.0
margin_bottom = 2970.4
texture = ExtResource( 2 )

[node name="GemCounter" type="Label" parent="BlueArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2443.74
margin_right = 502.0
margin_bottom = 2971.74
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenArea" type="Panel" parent="."]
margin_left = 304.0
margin_top = 200.329
margin_right = 806.0
margin_bottom = 1163.33
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CardCounter" type="Label" parent="GreenArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2017.07
margin_right = 502.0
margin_bottom = 2696.07
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GreenArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2470.4
margin_right = 500.0
margin_bottom = 2970.4
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemCounter" type="Label" parent="GreenArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2443.74
margin_right = 502.0
margin_bottom = 2971.74
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedArea" type="Panel" parent="."]
margin_left = 454.0
margin_top = 200.494
margin_right = 956.0
margin_bottom = 1163.49
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CardCounter" type="Label" parent="RedArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2017.07
margin_right = 502.0
margin_bottom = 2696.07
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="RedArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2470.4
margin_right = 500.0
margin_bottom = 2970.4
texture = ExtResource( 6 )

[node name="GemCounter" type="Label" parent="RedArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2443.74
margin_right = 502.0
margin_bottom = 2971.74
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrownArea" type="Panel" parent="."]
margin_left = 604.6
margin_top = 200.659
margin_right = 1106.6
margin_bottom = 1163.66
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CardCounter" type="Label" parent="BrownArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2017.07
margin_right = 502.0
margin_bottom = 2696.07
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BrownArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2470.4
margin_right = 500.0
margin_bottom = 2970.4
texture = ExtResource( 4 )

[node name="GemCounter" type="Label" parent="BrownArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2443.74
margin_right = 502.0
margin_bottom = 2971.74
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldArea" type="Panel" parent="."]
margin_left = 754.6
margin_top = 200.659
margin_right = 1256.6
margin_bottom = 1163.66
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GoldArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2470.4
margin_right = 500.0
margin_bottom = 2970.4
texture = ExtResource( 8 )

[node name="GemCounter" type="Label" parent="GoldArea"]
anchor_top = -2.094
anchor_bottom = -2.094
margin_top = 2443.74
margin_right = 502.0
margin_bottom = 2971.74
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemSummary" type="Label" parent="."]
margin_left = 920.0
margin_top = 337.0
margin_right = 1096.0
margin_bottom = 486.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReservedCardSummary" type="Label" parent="."]
margin_left = 755.2
margin_top = 228.0
margin_right = 906.2
margin_bottom = 365.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0/3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
